--- a/.github/workflows/mfem-jit.yml
+++ b/.github/workflows/mfem-jit.yml
@@ -180,20 +180,21 @@ jobs:
 
     - name: Set BUILD_DIR (cmake)
       if: matrix.build-system == 'cmake'
+      working-directory: mfem
       run: |
         echo "BUILD_DIR=build" >> "$GITHUB_ENV"
+        cd build/miniapps/meshing && make copy_miniapps_meshing_data
 
     - name: Get working directory
       run: env | grep BUILD_DIR
 
     # #########################################################################
-    # unit_tests is needed to trigger copy_data which is a dependencies (set where?)
     - name: MFEM JIT sequential unit tests
       if: matrix.mpi == 'seq'
       working-directory: mfem/${{env.BUILD_DIR}}/tests/unit
       run: |
         echo -e "\033[33m--- Compiling mjit_tests, sedov_tests, tmop_pa_tests\033[m"
-        make unit_tests mjit_tests sedov_tests_cpu sedov_tests_debug tmop_pa_tests_cpu tmop_pa_tests_debug -j3
+        make mjit_tests sedov_tests_cpu sedov_tests_debug tmop_pa_tests_cpu tmop_pa_tests_debug -j3
         echo -e "\033[33m--- Running sequential JIT tests\033[m"
         ./mjit_tests
         echo -e "\033[33m--- Running sedov tests with the debug device\033[m"
@@ -250,7 +251,7 @@ jobs:
       working-directory: mfem/${{env.BUILD_DIR}}/tests/unit
       run: |
         echo -e "\033[33m--- Compiling pmjit_tests, psedov_tests, ptmop_pa_tests\033[m"
-        make unit_tests pmjit_tests psedov_tests_cpu psedov_tests_debug ptmop_pa_tests_cpu -j3
+        make pmjit_tests psedov_tests_cpu psedov_tests_debug ptmop_pa_tests_cpu -j3
         echo -e "\033[33m--- Running parallel JIT tests\033[m"
         ${{env.DYLD}} mpirun -np 3 ./pmjit_tests
         echo -e "\033[33m--- Running sedov tests with the debug device\033[m"
