--- a/.github/workflows/mfem-jit.yml
+++ b/.github/workflows/mfem-jit.yml
@@ -178,12 +178,13 @@ jobs:
       run: |
         echo "BUILD_DIR=." >> "$GITHUB_ENV"
 
+    # ctests need some data files from data and miniapps/meshing
     - name: Set BUILD_DIR (cmake)
       if: matrix.build-system == 'cmake'
-      working-directory: mfem
+      working-directory: mfem/build
       run: |
         echo "BUILD_DIR=build" >> "$GITHUB_ENV"
-        cd build/miniapps/meshing && make copy_miniapps_meshing_data
+        make copy_data copy_miniapps_meshing_data
 
     - name: Get working directory
       run: env | grep BUILD_DIR
