--- a/.github/workflows/mfem-jit.yml
+++ b/.github/workflows/mfem-jit.yml
@@ -33,7 +33,7 @@ jobs:
         os: [ubuntu-latest] #, macos-latest]
         build-system: [cmake] #, make]
         target: [opt] #, dbg]
-        mpi: [seq] #, par]
+        mpi: [par] #, seq]
     name: ${{ matrix.os }}-${{ matrix.build-system }}-JIT-${{ matrix.target }}-${{ matrix.mpi }}
 
     runs-on: ${{ matrix.os }}
@@ -151,14 +151,28 @@ jobs:
           ${{ env.METIS_DIR_OPT }}
           ${{ env.HYPRE_DIR_OPT }}
 
-    - name: MFEM config and build (cmake)
-      if: matrix.build-system == 'cmake'
+    - name: MFEM config and build (seq, cmake)
+      if: matrix.build-system == 'cmake' && matrix.mpi == 'seq'
       working-directory: mfem
       run: |
         mkdir build && cd build
         cmake .. -DMFEM_USE_JIT=YES \
                  -DCMAKE_BUILD_TYPE=RelWithDebInfo -DCMAKE_VERBOSE_MAKEFILE=1 \
                  -DCMAKE_CXX_FLAGS_RELWITHDEBINFO="-O1 -g -DNDEBUG" \
+                 -DMFEM_ENABLE_TESTING=YES -DMFEM_ENABLE_EXAMPLES=NO -DMFEM_ENABLE_MINIAPPS=NO \
+                 -DCMAKE_INSTALL_PREFIX=install -DCMAKE_INSTALL_MESSAGE=LAZY
+        make install -j3
+
+    - name: MFEM config and build (par, cmake)
+      if: matrix.build-system == 'cmake' && matrix.mpi == 'par'
+      working-directory: mfem
+      run: |
+        mkdir build && cd build
+        cmake .. -DMFEM_USE_JIT=YES \
+                 -DCMAKE_BUILD_TYPE=RelWithDebInfo -DCMAKE_VERBOSE_MAKEFILE=1 \
+                 -DCMAKE_CXX_FLAGS_RELWITHDEBINFO="-O1 -g -DNDEBUG" \
+                 -DMFEM_USE_MPI=YES -DHYPRE=${{ env.HYPRE_DIR }}\
+                 -DMFEM_USE_METIS=YES -DMFEM_USE_METIS_5=YES -DMETIS_DIR=${{ env.METIS_DIR }} \
                  -DMFEM_ENABLE_TESTING=YES -DMFEM_ENABLE_EXAMPLES=NO -DMFEM_ENABLE_MINIAPPS=NO \
                  -DCMAKE_INSTALL_PREFIX=install -DCMAKE_INSTALL_MESSAGE=LAZY
         make install -j3
@@ -179,15 +193,12 @@ jobs:
         echo "BUILD_DIR=." >> "$GITHUB_ENV"
 
     # ctests need some data files from data and miniapps/meshing
-    - name: Set BUILD_DIR (cmake)
+    - name: Set BUILD_DIR and copy data & mesh (cmake)
       if: matrix.build-system == 'cmake'
       working-directory: mfem/build
       run: |
         echo "BUILD_DIR=build" >> "$GITHUB_ENV"
         make copy_data copy_miniapps_meshing_data
-
-    - name: Get working directory
-      run: env | grep BUILD_DIR
 
     # #########################################################################
     - name: MFEM JIT sequential unit tests
