--- a/.github/workflows/mfem-jit.yml
+++ b/.github/workflows/mfem-jit.yml
@@ -161,9 +161,8 @@ jobs:
     - name: Set cmake options options (cmake)
       if: matrix.build-system == 'cmake'
       run: |
-        ysno = [[ "matrix.mpi" == "par" ]] && echo "YES" || echo "NO"
-        echo "MFEM_USE_MPI=${ysno}" >> "$GITHUB_ENV"
-        echo "MFEM_USE_METIS=${ysno}" >> "$GITHUB_ENV"
+        echo "MFEM_USE_MPI=$([[ "matrix.mpi" == "par" ]] && echo "YES" || echo "NO")" >> "$GITHUB_ENV"
+        echo "MFEM_USE_METIS=$([[ "matrix.mpi" == "par" ]] && echo "YES" || echo "NO")" >> "$GITHUB_ENV"
 
     - name: MFEM config and build (cmake)
       if: matrix.build-system == 'cmake'
