--- a/.github/workflows/mfem-jit.yml
+++ b/.github/workflows/mfem-jit.yml
@@ -113,7 +113,7 @@ jobs:
         echo "DYLD=DYLD_LIBRARY_PATH=${metis_dir}/lib:${hypre_dir}/lib" >> "$GITHUB_ENV"
 
     - name: Set METIS_DIR and HYPRE_DIR (seq)
-      if: matrix.build-system == 'make' && matrix.mpi == 'seq'
+      if: matrix.mpi == 'seq'
       run: |
         echo "METIS_DIR=unused" >> "$GITHUB_ENV"
         echo "HYPRE_DIR=unused" >> "$GITHUB_ENV"
