--- a/.github/workflows/mfem-jit.yml
+++ b/.github/workflows/mfem-jit.yml
@@ -30,10 +30,10 @@ jobs:
   Just-In-Time-Tests:
     strategy:
       matrix:
-        os: [macos-latest] #, ubuntu-latest]
-        build-system: [cmake] #, make]
+        os: [macos-latest, ubuntu-latest]
+        build-system: [cmake, make]
         target: [dbg, opt]
-        mpi: [par] #, seq]
+        mpi: [par, seq]
     name: ${{ matrix.os }}-${{ matrix.build-system }}-JIT-${{ matrix.target }}-${{ matrix.mpi }}
 
     runs-on: ${{ matrix.os }}
@@ -186,7 +186,7 @@ jobs:
         mkdir build && cd build
         cmake .. -DMFEM_USE_JIT=YES \
                  -DCMAKE_BUILD_TYPE=${{env.CMAKE_BUILD_TYPE}} -DCMAKE_VERBOSE_MAKEFILE=1 \
-                 -DCMAKE_CXX_FLAGS_RELWITHDEBINFO="-O2 -g -DNDEBUG" \
+                 -DCMAKE_CXX_FLAGS_RELWITHDEBINFO="-O1 -g -DNDEBUG" \
                  -DMFEM_USE_MPI=${{env.MFEM_USE_MPI}} -DHYPRE_DIR=${{ env.HYPRE_DIR }} \
                  -DMFEM_USE_METIS=${{env.MFEM_USE_METIS}} -DMFEM_USE_METIS_5=${{env.MFEM_USE_METIS}} \
                  -DMETIS_DIR=${{ env.METIS_DIR }} \
