--- a/.github/workflows/mfem-jit.yml
+++ b/.github/workflows/mfem-jit.yml
@@ -28,6 +28,7 @@ env:
 
 jobs:
   Just-In-Time-Tests:
+   # MATRIX ###################################################################
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest]
@@ -38,25 +39,27 @@ jobs:
 
     runs-on: ${{ matrix.os }}
 
+    # CANCEL ##################################################################
     steps:
     - name: Cancel Previous Runs
       uses: styfle/cancel-workflow-action@0.11.0
       with:
         access_token: ${{ github.token }}
 
-    # #########################################################################
+    # NPROCESSORS #############################################################
+    - name: Get NPROCESSORS
+      run: echo NPROC=$(getconf _NPROCESSORS_ONLN) >> "$GITHUB_ENV"
+
+    # MPI #####################################################################
     - name: MPI install (Linux)
       if: matrix.mpi == 'par' && matrix.os == 'ubuntu-latest'
-      run: |
-        sudo apt-get install mpich libmpich-dev
+      run: sudo apt-get install mpich libmpich-dev
 
     - name: MPI install (MacOS)
       if: matrix.mpi == 'par' && matrix.os == 'macos-latest'
-      run: |
-        export HOMEBREW_NO_INSTALL_CLEANUP=1
-        brew install openmpi
+      run: HOMEBREW_NO_INSTALL_CLEANUP=1 brew install openmpi
 
-    # #########################################################################
+    # METIS ###################################################################
     - name: METIS cache
       id: metis-cache
       if: matrix.mpi == 'par'
@@ -74,9 +77,9 @@ jobs:
         install="$(pwd)/metis-5.0"
         cd metis-${{ env.METIS_VER }}
         make config shared=1 prefix=${install} cc=mpicc
-        make install -j3
+        make install -j${{env.NPROC}}
 
-    # #########################################################################
+    # HYPRE ###################################################################
     - name: HYPRE cache
       id: hypre-cache
       if: matrix.mpi == 'par'
@@ -94,12 +97,11 @@ jobs:
         install="$(pwd)/hypre-${{ env.HYPRE_VER }}/install"
         cd hypre-${{env.HYPRE_VER}}/src
         ./configure --prefix=${install} --disable-fortran --enable-shared CC=mpicc CFLAGS=-O1 CXX=mpic++
-        make install -j3
+        make install -j${{env.NPROC}}
 
-    # #########################################################################
-    # On MacOS, any dynamic linker (dyld) environment variables, such as DYLD_LIBRARY_PATH,
-    # are purged when launching protected processes. We need to set DYLD_LIBRARY_SET
-    # that has to be set in the right process
+    # On MacOS, any dynamic linker (dyld) environment variables such as
+    # DYLD_LIBRARY_PATH are purged when launching protected processes.
+    # We set DYLD which will set DYLD_LIBRARY_PATH later for each process.
     - name: Set METIS_DIR, HYPRE_DIR and DY/LD_LIBRARY_PATH (par)
       if: matrix.mpi == 'par'
       run: |
@@ -112,26 +114,26 @@ jobs:
         echo "LD_LIBRARY_PATH=${metis_dir}/lib:${hypre_dir}/lib" >> "$GITHUB_ENV"
         echo "DYLD=DYLD_LIBRARY_PATH=${metis_dir}/lib:${hypre_dir}/lib" >> "$GITHUB_ENV"
 
+    # HYPRE & METIS DIR #######################################################
     - name: Set METIS_DIR and HYPRE_DIR (seq)
       if: matrix.mpi == 'seq'
       run: |
         echo "METIS_DIR=unused" >> "$GITHUB_ENV"
         echo "HYPRE_DIR=unused" >> "$GITHUB_ENV"
 
-    # #########################################################################
+    # MFEM ####################################################################
     - name: MFEM Checkout
       uses: actions/checkout@v3
       with:
         path: mfem
 
-    # MAKE ####################################################################
+    # MFEM MAKE ###############################################################
     # MFEM debug (-pedantic -Wall -Werror) and g++ on ubuntu warns about multiple
-    # maybe-uninitialized variables. The 'no-maybe-uninitialized' option should
-    # be removed when resolved.
+    # maybe-uninitialized variables.
+    # The 'no-maybe-uninitialized' option should be removed when resolved.
     - name: Set extra compiler options (make, Linux)
       if: matrix.build-system == 'make' && matrix.os == 'ubuntu-latest'
-      run: |
-        echo "CXXFLAGS_OPT=-Wno-maybe-uninitialized" >> "$GITHUB_ENV"
+      run: echo "CXXFLAGS_OPT=-Wno-maybe-uninitialized" >> "$GITHUB_ENV"
 
     - name: MFEM config and build (make)
       if: matrix.build-system == 'make'
@@ -167,17 +169,14 @@ jobs:
       run: |
         echo "BUILD_DIR=." >> "$GITHUB_ENV"
 
-    # CMAKE ###################################################################
-    - name: Set cmake options options (cmake)
+    # MFEM CMAKE ##############################################################
+    - name: Set cmake options (cmake)
       if: matrix.build-system == 'cmake'
       run: |
-        echo CMAKE_BUILD_TYPE=$([[ "${{matrix.target}}" == "dbg" ]] && echo "Debug" || echo "RelWithDebInfo") >> "$GITHUB_ENV"
-
-    - name: Set cmake options options (cmake)
-      if: matrix.build-system == 'cmake'
-      run: |
+        echo "BUILD_DIR=build" >> "$GITHUB_ENV"
         echo "MFEM_USE_MPI=$([[ "${{matrix.mpi}}" == "par" ]] && echo "YES" || echo "NO")" >> "$GITHUB_ENV"
         echo "MFEM_USE_METIS=$([[ "${{matrix.mpi}}" == "par" ]] && echo "YES" || echo "NO")" >> "$GITHUB_ENV"
+        echo CMAKE_BUILD_TYPE=$([[ "${{matrix.target}}" == "dbg" ]] && echo "Debug" || echo "RelWithDebInfo") >> "$GITHUB_ENV"
 
     - name: MFEM config and build (cmake)
       if: matrix.build-system == 'cmake'
@@ -187,22 +186,15 @@ jobs:
         cmake .. -DMFEM_USE_JIT=YES \
                  -DCMAKE_BUILD_TYPE=${{env.CMAKE_BUILD_TYPE}} -DCMAKE_VERBOSE_MAKEFILE=1 \
                  -DCMAKE_CXX_FLAGS_RELWITHDEBINFO="-O1 -g -DNDEBUG" \
-                 -DMFEM_USE_MPI=${{env.MFEM_USE_MPI}} -DHYPRE_DIR=${{ env.HYPRE_DIR }} \
+                 -DMFEM_USE_MPI=${{env.MFEM_USE_MPI}} -DHYPRE_DIR=${{env.HYPRE_DIR}} \
                  -DMFEM_USE_METIS=${{env.MFEM_USE_METIS}} -DMFEM_USE_METIS_5=${{env.MFEM_USE_METIS}} \
-                 -DMETIS_DIR=${{ env.METIS_DIR }} \
+                 -DMETIS_DIR=${{env.METIS_DIR}} \
                  -DMFEM_ENABLE_TESTING=YES -DMFEM_ENABLE_EXAMPLES=NO -DMFEM_ENABLE_MINIAPPS=NO \
                  -DCMAKE_INSTALL_PREFIX=install -DCMAKE_INSTALL_MESSAGE=LAZY
-        make install -j3
-
-    # ctests need some data files from data and miniapps/meshing
-    - name: Set BUILD_DIR and copy data & mesh (cmake)
-      if: matrix.build-system == 'cmake'
-      working-directory: mfem/build
-      run: |
-        echo "BUILD_DIR=build" >> "$GITHUB_ENV"
+        make install -j${{env.NPROC}}
         make copy_data copy_miniapps_meshing_data
 
-    # #########################################################################
+    # SEQ EX1 #################################################################
     - name: MFEM JIT sequential examples tests
       if: matrix.mpi == 'seq'
       working-directory: mfem/${{env.BUILD_DIR}}/examples
@@ -218,7 +210,7 @@ jobs:
         echo -e "\033[33m--- Now using MFEM_JIT_DEBUG environment variable to show all JIT commands\033[m"
         MFEM_JIT_DEBUG=1 ./ex1 -pa -no-vis | (head -n 16 ; tail -n 2)
 
-    # #########################################################################
+    # SEQ UNIT, SEDOV & TMOP ##################################################
     - name: MFEM JIT sequential unit tests
       if: matrix.mpi == 'seq'
       working-directory: mfem/${{env.BUILD_DIR}}/tests/unit
@@ -239,7 +231,7 @@ jobs:
         echo -e "\033[33m--- Running tmop tests with the cpu device, re-using the JIT cache\033[m"
         ./tmop_pa_tests_cpu --verbose
 
-    # #########################################################################
+    # PAR EX1 #################################################################
     - name: MFEM JIT parallel examples tests
       working-directory: mfem/${{env.BUILD_DIR}}/examples
       if: matrix.mpi == 'par'
@@ -247,19 +239,19 @@ jobs:
         echo -e "\033[33m--- Compiling ex1p\033[m"
         make ex1p
         echo -e "\033[33m--- First run will create the JIT cache: archive + shared\033[m"
-        ${{env.DYLD}} mpirun -np 3 ./ex1p -pa -no-vis | (head -n 16 ; tail -n 2)
+        ${{env.DYLD}} mpirun -np ${{env.NPROC}} ./ex1p -pa -no-vis | (head -n 16 ; tail -n 2)
         echo -e "\033[33m--- Second run will re-use the caches\033[m"
-        ${{env.DYLD}} mpirun -np 3 ./ex1p -pa -no-vis | (head -n 16 ; tail -n 2)
+        ${{env.DYLD}} mpirun -np ${{env.NPROC}} ./ex1p -pa -no-vis | (head -n 16 ; tail -n 2)
         echo -e "\033[33m--- Removing the JIT shared library, but keeping the archive one\033[m"
         rm libmjit.[^a]*
         echo -e "\033[33m--- Using MFEM_JIT_DEBUG to see the JIT command\033[m"
-        ${{env.DYLD}} MFEM_JIT_DEBUG=1 mpirun -np 3 ./ex1p -pa -no-vis | (head -n 16 ; tail -n 2)
+        ${{env.DYLD}} MFEM_JIT_DEBUG=1 mpirun -np ${{env.NPROC}} ./ex1p -pa -no-vis | (head -n 16 ; tail -n 2)
         echo -e "\033[33m--- Removing all JIT cache ---\033[m"
         rm libmjit.*
         echo -e "\033[33m--- Now using MFEM_JIT_FORK environment variable to use a child process for the std::system\033[m"
-        ${{env.DYLD}} MFEM_JIT_FORK=1 mpirun -np 3 ./ex1p -pa -no-vis | (head -n 16 ; tail -n 2)
+        ${{env.DYLD}} MFEM_JIT_FORK=1 mpirun -np ${{env.NPROC}} ./ex1p -pa -no-vis | (head -n 16 ; tail -n 2)
 
-    # #########################################################################
+    # PAR UNIT, SEDOV & TMOP ##################################################
     - name: MFEM JIT parallel unit tests
       if: matrix.mpi == 'par'
       working-directory: mfem/${{env.BUILD_DIR}}/tests/unit
@@ -267,14 +259,14 @@ jobs:
         echo -e "\033[33m--- Compiling pmjit_tests, psedov_tests, ptmop_pa_tests\033[m"
         make pmjit_tests psedov_tests_cpu ptmop_pa_tests_cpu -j3
         echo -e "\033[33m--- Running parallel JIT tests\033[m"
-        ${{env.DYLD}} mpirun -np 2 ./pmjit_tests
+        ${{env.DYLD}} mpirun -np ${{env.NPROC}} ./pmjit_tests
         echo -e "\033[33m--- Running sedov tests with the cpu device\033[m"
-        ${{env.DYLD}} mpirun -np 2 ./psedov_tests_cpu --verbose
+        ${{env.DYLD}} mpirun -np ${{env.NPROC}} ./psedov_tests_cpu --verbose
         echo -e "\033[33m--- Running sedov tests with the cpu device, re-using the JIT cache\033[m"
-        ${{env.DYLD}} mpirun -np 2 ./psedov_tests_cpu --verbose
+        ${{env.DYLD}} mpirun -np ${{env.NPROC}} ./psedov_tests_cpu --verbose
         echo -e "\033[33m--- Removing the JIT shared library, but keeping the archive one\033[m"
         rm libmjit.[^a]*
-        ${{env.DYLD}} mpirun -np 2 ./psedov_tests_cpu --verbose
+        ${{env.DYLD}} mpirun -np ${{env.NPROC}} ./psedov_tests_cpu --verbose
         echo -e "\033[33m--- Running tmop tests with the cpu device\033[m"
-        ${{env.DYLD}} mpirun -np 2 ./ptmop_pa_tests_cpu --verbose
+        ${{env.DYLD}} mpirun -np ${{env.NPROC}} ./ptmop_pa_tests_cpu --verbose
 
